src/styles/index.scss
@import url('../pages/Login/login.scss');
@import url('../pages/Register/register.scss');
@import url('../pages/ForgotPassword/forgot-password.scss');
@import url('../pages/PasswordReset/password-reset.scss');
@import url('../pages/Dashboard/dashboard.scss');

@import url('../layouts/Header/header.scss');

@import url('../components/Dropdown/dropdown.scss');
@import url('../components/Popup/create-event-popup.scss');
@import url('../components/Dropzone/dropzone.scss');
@import url('../components/EventCard/event-card.scss');
@import url('../components/EventList/event-list.scss');
@import url('../components/UploadPhotos/upload-photos.scss');
@import url('../components/NoEvent/no-event.scss');
@import url('../components/ChangePassword/change-password.scss');
@import url('../components/LogoutAll/logout-all.scss');
@import url('../components/CarouselPhoto/carousel-photo-area.scss');

@import url('../pages/Dashboard/Profile/profile.scss');
@import url('../pages/NotMatch/no-match.scss');
@import url('../pages/Dashboard/EventAnalyses/event-analyses.scss');
@import url('../pages/Dashboard/EventUpdate/event-update.scss');

@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600&family=Quicksand:wght@300;400;500;700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500;700&display=swap');

* {
  box-sizing: border-box;
}

html,
body {
  margin: 0;
  min-width: 320px;
  font-family: 'Montserrat', sans-serif;
}

#root {
  height: 100%;
  user-select: none;
}

